# QuickPLS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EULA.md  LICENSE.md  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  validation_discrepancy.yml
.github/workflows/: ci.yml
crates/qpls-assessment/: Cargo.toml
crates/qpls-assessment/src/: lib.rs
crates/qpls-cli/: Cargo.toml
crates/qpls-cli/src/: main.rs
crates/qpls-core/: Cargo.toml
crates/qpls-core/src/: contract.rs  lib.rs  methods.rs  roadmap.rs  statistics.rs  validation.rs
crates/qpls-data/: Cargo.toml
crates/qpls-data/src/: lib.rs
crates/qpls-estimation/: Cargo.toml
crates/qpls-estimation/src/: lib.rs  pls.rs
crates/qpls-project/: Cargo.toml
crates/qpls-project/src/: lib.rs
crates/qpls-resampling/: Cargo.toml
crates/qpls-resampling/src/: lib.rs
crates/qpls-runner/: Cargo.toml
crates/qpls-runner/src/: lib.rs
docs/: ACCELERATED_DEVELOPMENT.md  ARCHITECTURE.md  BENCHMARKS.md  DELIVERY_STATUS.md  DEPENDENCY_NOTICES.md  DEPENDENCY_NOTICES_V1_0.md  DEVELOPMENT_LEDGER.md  DIAGRAM_ERGONOMICS_V0_9_1.md  FAQ.md  FIRST_PLS_MODEL_TUTORIAL.md  GITHUB_RELEASE_V1_0.md  INSTALLATION_V1_0.md  KNOWN_DIFFERENCES.md  METHODOLOGY_MANUAL_V1_0.md  METHOD_COMPATIBILITY.md  METHOD_PROMOTION_CRITERIA.md  METHOD_PROMOTION_PROGRAM_V1_2.md  MONTE_CARLO_VALIDATION.md  PROFESSIONAL_SEM_DESIGNER_V0_9_3.md  PUBLICATION_READY_AUDIT.md  QUICK_START_V1_0.md  RELEASE_CHECKSUMS_V1_0.txt  RELEASE_NOTES_V0_9_RC1.md  RELEASE_NOTES_V1_0.md  SMARTPLS_STYLE_DIAGRAM_V0_9_2.md  SUPPORTED_SCOPE_V0_9_RC1.md  TROUBLESHOOTING.md  USER_GUIDE_V1_0.md  V1_1_1_NATIVE_UX_HARDENING.md  V1_1_UX_AUDIT.md  V1_3_1_SEM_DIAGRAM_GEOMETRY_POLISH.md  V1_3_2_SEM_CANVAS_TOOLBAR_REDESIGN.md  V1_3_3_SEM_EXPLORER_SIDEBAR_REDESIGN.md  V1_3_SEM_DESIGNER_UX_OVERHAUL.md  V1_4_FRONTEND_SUCCESS_PROGRAM.md  V1_5_0_RESEARCHER_UX_REFINEMENT.md  V1_5_1_NAVIGATION_WORKSPACE_HARDENING.md  V1_5_2_DATA_WORKSPACE_HARDENING.md  V1_5_2_SCREEN_REVIEW_SMARTPLS_USER_AUDIT.md  V1_5_3_LAYOUT_COPY_READINESS_POLISH.md  (+7 more)
docs/methods/: CBSEM_FIT_V1.md  CBSEM_ML_V1.md  CBSEM_MODIFICATION_INDICES_V1.md  CBSEM_MULTIGROUP_INVARIANCE_V1.md  CCA_V1.md  CFA_ML_V1.md  CTA_PLS_V1.md  FIMIX_PLS_V1.md  GAUSSIAN_COPULA_ENDOGENEITY_V1.md  GSCA_V1.md  HIGHER_ORDER_CONSTRUCTS_V1.md  IPMA_V1.md  JACKKNIFE_ENGINE_V1.md  MEDIATION_V1.md  MICOM_V1.md  MODERATED_MEDIATION_V1.md  NCA_V1.md  NONLINEAR_EFFECTS_V1.md  PCA_V1.md  PERMUTATION_ENGINE_V1.md  PLSC_V1.md  PLSPREDICT_HOLDOUT_V1.md  PLSPREDICT_V1.md  PLS_ASSESSMENT_V1.md  PLS_ASSESSMENT_V2.md  PLS_ASSESSMENT_V3.md  PLS_ASSESSMENT_V4.md  PLS_CCA_V1.md  PLS_CONTROLS_V1.md  PLS_CTA_PLS_V1.md  PLS_GAUSSIAN_COPULA_ENDOGENEITY_V1.md  PLS_HIGHER_ORDER_V1.md  PLS_HTMT_V1.md  PLS_MEDIATION_V1.md  PLS_MGA_PERMUTATION_V1.md  PLS_MGA_TWO_GROUP_V1.md  PLS_MODERATED_MEDIATION_V1.md  PLS_NONLINEAR_EFFECTS_V1.md  PLS_PM_V1.md  PLS_POS_BOUNDED_V1.md  (+13 more)
src/: App.tsx  main.tsx  store.test.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnalysisCatalog.tsx  ConstructNode.tsx  DataWorkspace.tsx  Explorer.tsx  GroupsWorkspace.tsx  IndicatorNode.tsx  Inspector.tsx  LatentNode.tsx  ModelCanvas.tsx  NavRail.tsx  OnboardingWorkspace.tsx  ProductivityOverlays.tsx  ReadinessPanel.tsx  ReportsWorkspace.tsx  RunHistory.tsx  RunWorkspace.tsx  SemEdge.tsx  StatusBar.tsx  TopBar.tsx  Ui.tsx  WorkflowStrip.tsx  accessibilityContracts.test.ts
src/data/: sample.ts  smokeRun.ts
src/domain/: analysisReadiness.test.ts  analysisReadiness.ts  dataWorkspace.test.ts  dataWorkspace.ts  diagramGraph.test.ts  diagramGraph.ts  inference.test.ts  inference.ts  methodStatus.ts  modelLayout.test.ts  modelLayout.ts  modelValidation.test.ts  modelValidation.ts  publicationDiagram.test.ts  publicationDiagram.ts  resultTables.test.ts  resultTables.ts  runComparison.test.ts  runComparison.ts  semGeometry.test.ts  semGeometry.ts
src/services/: projectService.ts
tests/fixtures/: research-data.csv
validation/: REFERENCE_RESULTS.md  RHO_A_REFERENCE.md  Resolve-Rscript.ps1  aggregate_studentized_qualification.py  assessment_csem_compare.py  assessment_csem_reference.R  assessment_method_promotion_audit.py  assessment_publication_audit.py  assessment_published_fixture_compare.py  assessment_published_fixture_csem.R  assessment_simulation.py  blindfolding_reference.py  cbsem_cfa_method_promotion_audit.py  cbsem_lavaan_reference.py  cbsem_publication_audit.py  cbsem_v07_reference.py  cca_method_promotion_audit.py  cca_reference.py  cta_pls_method_promotion_audit.py  cta_pls_reference.py  data_project_publication_audit.py  development_slices.json  documentation_publication_audit.py  endogeneity_method_promotion_audit.py  endogeneity_reference.py  extended_methods_publication_audit.py  extended_pls_publication_audit.py  extended_pls_unsupported_guard.py  external_reference_probe.py  fifth_batch_method_promotion_audit.py  fifth_batch_product_enforcement_audit.py  fimix_pls_method_promotion_audit.py  final_method_promotion_common.py  foundation_publication_audit.py  fourth_batch_method_promotion_audit.py  fourth_batch_product_enforcement_audit.py  gsca_method_promotion_audit.py  gui_diagram_publication_audit.py  higher_order_hybrid_guard.py  higher_order_hybrid_reference.py  (+152 more)
validation/demo/: quickpls_v04_demo.expected.json  quickpls_v04_demo.validation.json
validation/fixtures/: corporate_reputation.csv  corporate_reputation.recipe.json  csem_threecommonfactors.csv  csem_threecommonfactors.recipe.json  rho_a_reference.csv  rho_a_reference.recipe.json  simple_reflective.csv  simple_reflective.factor.recipe.json  simple_reflective.mode_b.recipe.json  simple_reflective.pca.recipe.json  simple_reflective.recipe.json
validation/monte_carlo/: Cargo.toml
validation/monte_carlo/src/: main.rs
(+1226 files in other folders)
