[workspace]
resolver = "2"
members = ["crates/qpls-data", "crates/qpls-project", "crates/qpls-core", "crates/qpls-estimation", "crates/qpls-assessment", "crates/qpls-resampling", "crates/qpls-runner", "crates/qpls-cli", "src-tauri"]

[workspace.package]
version = "1.5.5"
edition = "2024"
license = "LicenseRef-Proprietary"

[workspace.dependencies]
anyhow = "1.0"
ambers = "0.4.2"
arrow = { version = "57", features = ["ipc"] }
calamine = "0.36"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
faer = "0.24"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"
rust_xlsxwriter = "0.96"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
statrs = "0.18"
thiserror = "2.0"
tempfile = "3.20"
uuid = { version = "1.11", features = ["v4", "serde"] }
zip = { version = "6", default-features = false, features = ["deflate"] }

