[package]
name = "qpls-assessment"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow.workspace = true
faer.workspace = true
qpls-core = { path = "../qpls-core" }
qpls-data = { path = "../qpls-data" }
qpls-estimation = { path = "../qpls-estimation" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx = "0.5"
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
