[package]
name = "qpls-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
qpls-core = { path = "../qpls-core" }
qpls-data = { path = "../qpls-data" }
qpls-estimation = { path = "../qpls-estimation" }
qpls-assessment = { path = "../qpls-assessment" }
qpls-resampling = { path = "../qpls-resampling" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
