[package]
name = "qpls-resampling"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow.workspace = true
faer.workspace = true
qpls-core = { path = "../qpls-core" }
qpls-data = { path = "../qpls-data" }
qpls-estimation = { path = "../qpls-estimation" }
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
statrs.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true
uuid.workspace = true
